[RW-13732][risk=no] Added api changes for user initial credit bypass (#8879)